[package]
authors = ["49nord GmbH <hello@49nord.de>"]
name = "hwclock"
version = "0.2.0"
repository = "https://github.com/49nord/hwclock-rs"
license = "MIT"
documentation = "https://docs.rs/hwclock"
description = "Manages the Linux hardware clock through ioctls"

[dependencies]
chrono = "0.4.0"
libc = "0.2.36"
nix = "0.10.0"
